# QtOpenGLTemplate

./: .clocignore  CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  opengldialogviewer.cpp  opengldialogviewer.h  opengldialogviewer.ui  samplewidget.cpp  samplewidget.h
src/helpers/: CMakeLists.txt  camera.cpp  camera.h
src/tests/: CMakeLists.txt  json_tests.cpp
